--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 	<section>
+	<!--Botones arriba-->
 		<div class="col-md-12 text-center">
 			<button>Drees</button>
 			<button>San Miguel de Allende</button>
