Arreglado gulp, listo js y modal, falta sass

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 	<section>
-	<!--Botones arriba-->
+	<!--Botones arriba con background-->
 		<div class="col-md-12 text-center">
 			<button>Drees</button>
 			<button>San Miguel de Allende</button>
@@ -53,6 +53,7 @@
 			<button>Ramo</button>
 			<button>Souvenires</button>
 			<button>Invitación</button>
+			<button>Prueba</button>
 		</div>
 		<div id="mostrar" class="col-md-12">
 		</div>
