--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Todos los pines <span class="caret"></span></a>
 	        </li>
-	        <li><a href="#">Link</a></li>
-	        <li><a href="#">Link</a></li>
-	        <li><a href="#">Link</a></li>
+	        <li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i> Username</a></li>
+	        <li><a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a></li>
+	        <li><a href="#"><i class="fa fa-commenting-o" aria-hidden="true"></i></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
