Listo tipo pinterest, faltan botones

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 			<button>Souvenires</button>
 			<button>Invitación</button>
 		</div>
-		<div id="mostrar" class="col-md-12">
+		<div id="mostrar" class="col-md-12 center-block">
+		<div id="columnas" class="center-block">
+		</div>
 		</div>
 	</section>
 	<script src="dist/js/script.js"></script>
