--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 	<section>
 	<!--Botones arriba con background-->
 		<div class="col-md-12 text-center">
-			<button>Drees</button>
-			<button>San Miguel de Allende</button>
-			<button>Friki</button>
-			<button>Invitaciones</button>
-			<button>Fotography</button>
-			<button>Photocall</button>
-			<button>Damas</button>
-			<button>Ilumination</button>
-			<button>Ramo</button>
-			<button>Souvenires</button>
-			<button>Invitación</button>
+			<button class="item1">Drees</button>
+			<button class="item2">San Miguel de Allende</button>
+			<button class="item3">Friki</button>
+			<button class="item4">Invitaciones</button>
+			<button class="item5">Fotography</button>
+			<button class="item6">Photocall</button>
+			<button class="item7">Damas</button>
+			<button class="item8">Ilumination</button>
+			<button class="item9">Ramo</button>
+			<button class="item10">Souvenires</button>
+			<button class="item11">Invitación</button>
 		</div>
 		<div id="mostrar" class="col-md-12 center-block">
 		<div id="columnas" class="center-block">
